fixed text overlaping

--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -514,7 +514,7 @@ border-radius: 40% 40% 0 0 ;
         padding: 6%;
     }
     .ll{
-        height:350px;
+        height:320px;
     }
     .sl
     {
@@ -538,7 +538,7 @@ border-radius: 40% 40% 0 0 ;
             font-size: 0.8rem;
             margin-top: 43%;
             color: #696a86;
-            margin-right: 18%;
+            margin-right: 20%;
     
             span {
                 color: #333;
@@ -552,6 +552,7 @@ border-radius: 40% 40% 0 0 ;
             border-radius: 18px;
             margin-top: 3%;
             margin-right: 17%;
+            font-size: 0.8rem;
         }
     }
     .expand {
